# fgra-mapper

./: .gitignore  CMakeLists.txt  README.md  build.sh  run (copy).sh  run.sh  rundfg.sh
Syn/: Syn.tcl  Syn.ys  lib.v  lut.il  temp_rtlil.il
include/Py_Tools/: py_invoke.h
include/adg/: adg.h  adg_edge.h  adg_node.h
include/dfg/: dfg.h  dfg_edge.h  dfg_node.h  python_path.h  python_path.h.in
include/graph/: graph.h  graph_edge.h  graph_node.h
include/ir/: adg_ir.h  dfg_ir.h
include/mapper/: configuration.h  io_scheduler.h  mapper.h  mapper_sa.h  mapping.h  visualize.h
include/op/: operations.h
include/rtlil/: rtlil.h  rtlil_ir.h
resources/adgs/: my_cgra_test.json  my_cgra_test_16x16.json  my_cgra_test_32x32.json  my_cgra_test_32x32_3track.json  my_cgra_test_32x32_3track_6.json  my_cgra_test_4x4.json  my_cgra_test_4x4_3track.json  my_cgra_test_4x4_6track.json  my_cgra_test_6track_6.json
resources/dfgs/: conv3.dot  conv3.json  matrixmul.dot  simple.dot  test168.dot  test336.dot  test42.dot  test84.dot
resources/ops/: operations.json
src/: main.cpp
src/Py_Tools/: conflictpolytope.py  conflictpolytope_same_step.py  graph_color.py  iterDistGen.py  py_invoke.cpp
src/adg/: adg.cpp  adg_node.cpp
src/dfg/: dfg.cpp  dfg_node.cpp
src/graph/: graph.cpp  graph_node.cpp
src/ir/: adg_ir.cpp  dfg_ir.cpp
src/mapper/: configuration.cpp  io_scheduler.cpp  mapper.cpp  mapper_sa.cpp  mapping.cpp  visualize.cpp
src/op/: operations.cpp
src/rtlil/: rtlil.cpp  rtlil_ir.cpp
